ctint/3.1.x/_sources/_autosummary/triqs_ctint.solver.Solver.rst.txt
triqs\_ctint.solver.Solver
==========================

.. currentmodule:: triqs_ctint.solver

.. autoclass:: Solver



.. rubric:: Methods

.. autosummary::
    :toctree:                             
    
      ~Solver.__init__
      ~Solver.hdf5_format
      ~Solver.post_process
      ~Solver.solve





.. rubric:: Attributes

.. autosummary::
    :toctree:                             
    
      ~Solver.D0_iw
      ~Solver.F_iw
      ~Solver.G0_iw
      ~Solver.G0_shift_iw
      ~Solver.G0_shift_tau
      ~Solver.G2_iw
      ~Solver.G2c_iw
      ~Solver.G_iw
      ~Solver.Jperp_iw
      ~Solver.M3ph_delta
      ~Solver.M3ph_iw
      ~Solver.M3ph_iw_nfft
      ~Solver.M3ph_tau
      ~Solver.M3pp_delta
      ~Solver.M3pp_iw
      ~Solver.M3pp_iw_nfft
      ~Solver.M3pp_tau
      ~Solver.M4_iw
      ~Solver.M_hartree
      ~Solver.M_iw
      ~Solver.M_iw_nfft
      ~Solver.M_tau
      ~Solver.Sigma_iw
      ~Solver.auto_corr_time
      ~Solver.average_k
      ~Solver.average_sign
      ~Solver.chi2ph_conn_tau_from_M3
      ~Solver.chi2ph_iw
      ~Solver.chi2ph_iw_from_M3
      ~Solver.chi2ph_tau
      ~Solver.chi2ph_tau_from_M3
      ~Solver.chi2pp_conn_tau_from_M3
      ~Solver.chi2pp_iw
      ~Solver.chi2pp_iw_from_M3
      ~Solver.chi2pp_tau
      ~Solver.chi2pp_tau_from_M3
      ~Solver.chi3ph_iw
      ~Solver.chi3ph_iw_nfft
      ~Solver.chi3pp_iw
      ~Solver.chi3pp_iw_nfft
      ~Solver.chiAB_iw
      ~Solver.chiAB_tau
      ~Solver.constr_params
      ~Solver.density
      ~Solver.histogram
      ~Solver.last_solve_params

